# nasty

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FAQ.md  INSTALL.md  README.md  UPDATE.md  flake.nix  nasty-0.0.11-reddit.md
.github/workflows/: build-cloud-image.yml  build-iso-sdboot.yml  build-iso.yml  cache.yml  ci.yml  integration.yml  nix-engine-build.yml  nixpkgs-bump.yml  security.yml
docs/: active-directory-support.md  ad-domain-controller.md  backup-restore.md  firewall-custom-rules.md  network-architecture.md  operations-control-center.md
docs/adr/: 0001-secure-boot-via-lanzaboote.md
docs/plans/: 2026-07-07-ad-member-join.md
docs/superpowers/plans/: 2026-07-09-backup-restore.md  2026-07-10-ad-domain-controller.md  2026-07-10-firewall-custom-rules.md  2026-07-13-operations-control-center.md
engine/: Cargo.toml  deny.toml
engine/nasty-api/: Cargo.toml
engine/nasty-api/src/: auth.rs  main.rs  router.rs  terminal.rs
engine/nasty-apidoc/src/: main.rs
engine/nasty-apps/: Cargo.toml
engine/nasty-apps/src/: caddy.rs  lib.rs  truecharts.rs
engine/nasty-backup/: Cargo.toml
engine/nasty-backup/src/: jobs.rs  lib.rs  restore.rs  scheduler.rs
engine/nasty-common/: Cargo.toml
engine/nasty-common/src/: cmd.rs  jsonrpc.rs  lib.rs  metrics_types.rs  secrets.rs  secure_boot.rs  state.rs  tpm.rs
engine/nasty-engine/: Cargo.toml  build.rs
engine/nasty-engine/src/: app_deploy.rs  auth.rs  auth_oidc.rs  auth_webauthn.rs  boot_status.rs  fs_dependents.rs  fs_lock.rs  guestshare.rs  ingress_conflict.rs  log_stream.rs  main.rs  rest_gateway.rs  router.rs  subvol_rollback.rs  subvolume_dependents.rs  telemetry.rs  terminal.rs  vm_console.rs  vm_disk_import.rs
engine/nasty-engine/src/registry/: markdown.rs  methods.rs  mod.rs  openapi.rs  paths.rs  tests.rs
engine/nasty-engine/src/router/: alerts.rs  apps.rs  audit.rs  auth.rs  backup.rs  bcachefs.rs  dc.rs  domain.rs  fs.rs  guestshare.rs  mod.rs  notifications.rs  service.rs  share.rs  smb.rs  snapshot.rs  subvolume.rs  system.rs  vm.rs
engine/nasty-metrics/: Cargo.toml
engine/nasty-metrics/fixtures/: ata_hgst_he10.json  ata_megaraid_sat.json  nvme_goodram_irdm.json  nvme_hynix_bc901.json  nvme_kingston_snv3s.json  nvme_samsung_980.json  nvme_samsung_980_pro.json  sas_seagate_clean.json  sas_seagate_failing.json  sas_toshiba_mg08_padded.json  scan_open_megaraid.json
engine/nasty-metrics/src/: collect_bcachefs.rs  collect_kernel.rs  collect_system.rs  db.rs  main.rs  prometheus.rs
engine/nasty-sharing/: Cargo.toml
engine/nasty-sharing/src/: iscsi.rs  lib.rs  nfs.rs  nvmeof.rs  smb.rs  v6.rs
engine/nasty-snapshot/: Cargo.toml
engine/nasty-snapshot/src/: lib.rs
engine/nasty-storage/: Cargo.toml
engine/nasty-storage/src/: btrfs.rs  cmd.rs  disk_type.rs  filesystem.rs  lib.rs  pool.rs  subvolume.rs
engine/nasty-system/: Cargo.toml  build.rs
engine/nasty-system/src/: alerts.rs  backup.rs  dc.rs  domain.rs  firewall.rs  firmware.rs  guest_tools.rs  hardware.rs  lib.rs  metrics.rs  network.rs  notifications.rs  nut.rs  passthrough.rs  protocol.rs  rdma.rs  rest_server.rs  secure_boot.rs  secure_boot_enrollment.rs  settings.rs  tailscale.rs  tuning.rs  update.rs
engine/nasty-system/src/network/: layered.rs  nm.rs
engine/nasty-system/src/network/nm/: dbus.rs
engine/nasty-vm/: Cargo.toml
engine/nasty-vm/src/: lib.rs  qmp.rs
middleware/nasty-api/src/: main.rs  router.rs
middleware/nasty-sharing/src/: iscsi.rs  nvmeof.rs
middleware/nasty-storage/src/: subvolume.rs
middleware/nasty-system/: Cargo.toml
middleware/nasty-system/src/: lib.rs  protocol.rs  settings.rs  update.rs
nixos/: TESTING.md  appliance-base.nix  cloud.nix  configuration.nix  flake.nix  grub-device.nix  iso.nix  rootfs.nix  tls.nix  vm.nix
nixos/modules/: linuxquota.nix  nasty-secure-boot.nix  nasty.nix
nixos/system-flake/: flake.nix  flake.nix.template
nixos/tests/: ad-dc.nix  ad-member.nix  appliance-smoke.nix  bcachefs-smoke.nix
scripts/: extract_smart_attribute_metadata.py
tests/: run-tests.sh  run_tests.py  test_iscsi.py  test_multiprotocol.py  test_nvmeof.py  test_shares.py  test_smb.py
webui/: package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
webui/src/: app.css  d3.d.ts  novnc.d.ts
webui/src/lib/: auth.ts  confirm.svelte.ts  dc.svelte.ts  domain.svelte.ts  format.test.ts  format.ts  fs-dependents.test.ts  fs-dependents.ts  navigation.test.ts  navigation.ts  network.test.ts  network.ts  reboot.svelte.ts  rollbackState.svelte.test.ts  rollbackState.svelte.ts  rpc.test.ts  rpc.ts  smart_attribute_metadata.ts  sysInfoRefresh.svelte.ts  temperature.svelte.test.ts  temperature.svelte.ts  toast.svelte.ts  types.ts  uiPrefs.svelte.test.ts  uiPrefs.svelte.ts  unlock-fs.svelte.ts  update-progress.test.ts  update-progress.ts  utils.ts
webui/src/lib/components/: BcachefsDiagnostics.svelte  BridgeCreator.svelte  ClassicSidebarNav.svelte  CodeEditor.svelte  ConfirmDialog.svelte  IconSidebarNav.svelte  ListenAddressPicker.svelte  PathPicker.svelte  ReconnectSpinner.svelte  SecureBootEnrollmentWizard.svelte  SortTh.svelte  Toasts.svelte  UnlockFsDialog.svelte  io-chart.svelte
webui/src/lib/directory/: DcPanel.svelte
webui/src/lib/sharing/: iscsi.svelte.ts  nvmeof.svelte.ts  rdma.svelte.ts  smb.svelte.ts
webui/src/routes/: +layout.svelte  +page.svelte
webui/src/routes/account/: +page.svelte
webui/src/routes/alerts/: +page.svelte
webui/src/routes/apps/: +page.svelte
webui/src/routes/backups/: +page.svelte
webui/src/routes/bcachefs/: +page.svelte
webui/src/routes/disks/: +page.svelte
webui/src/routes/files/: +page.svelte
webui/src/routes/filesystems/: +page.svelte
webui/src/routes/firewall/: +page.svelte
webui/src/routes/hardware/: +page.svelte
webui/src/routes/help/: +page.svelte
webui/src/routes/ingress/: +page.svelte
webui/src/routes/licenses/: +page.svelte
webui/src/routes/logs/: +page.svelte
webui/src/routes/operations/: +page.svelte
webui/src/routes/pools/: +page.svelte
webui/static/: THIRD-PARTY-LICENSES.md
(+33 files in other folders)
