[workspace]
resolver = "2"
members = [
    "nasty-engine",
    "nasty-common",
    "nasty-metrics",
    "nasty-storage",
    "nasty-sharing",
    "nasty-snapshot",
    "nasty-system",
    "nasty-vm",
    "nasty-apps",
    "nasty-backup",
]

[workspace.package]
version = "0.0.13"
edition = "2024"
license = "GPL-3.0-only"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
argon2 = { version = "0.5", features = ["rand"] }
rand = "0.10"
base64 = "0.22"
tokio-util = "0.7"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
portable-pty = "0.9"
rusqlite = { version = "0.39", features = ["bundled"] }
libc = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
schemars = "1"
