[package]
name = "nasty-apps"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nasty-common = { path = "../nasty-common" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
schemars.workspace = true
reqwest.workspace = true
bollard = "0.21"
serde_yaml_ng = "0.10"
futures-util.workspace = true
libc.workspace = true
