[package]
name = "nasty-backup"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
nasty-common = { path = "../nasty-common" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
schemars.workspace = true
uuid.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cron = "0.16"
rustic_core = "0.11"
rustic_backend = "0.6"
jiff = "0.2"
url = "2"
