[package]
name = "nasty-common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
schemars.workspace = true
base64.workspace = true
tempfile = "3"

[dev-dependencies]
tempfile = "3"
