[package]
name = "nasty-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
nasty-common = { path = "../nasty-common" }
nasty-storage = { path = "../nasty-storage" }
nasty-sharing = { path = "../nasty-sharing" }
nasty-snapshot = { path = "../nasty-snapshot" }
nasty-system = { path = "../nasty-system" }
nasty-vm = { path = "../nasty-vm" }
nasty-apps = { path = "../nasty-apps" }
nasty-backup = { path = "../nasty-backup" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
argon2.workspace = true
rand.workspace = true
base64.workspace = true
thiserror.workspace = true
portable-pty.workspace = true
futures-util.workspace = true
schemars.workspace = true
reqwest.workspace = true
sha2 = "0.11"
subtle = "2"
bollard = "0.21"
serde_yaml_ng = "0.10"
tokio-util = { workspace = true, features = ["io"] }
openidconnect = { version = "4", default-features = false, features = ["accept-rfc3339-timestamps", "accept-string-booleans"] }
http = "1"
# Vendored Swagger UI assets, embedded into the binary at compile time
# (see vendor/swagger-ui/). include_dir is pure Rust — no -sys deps and
# nothing for the Nix derivation to learn about.
include_dir = "0.7"
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# WebAuthn third login backend (issue #289). 0.5 is the current
# stable line; `prf` feature is intentionally NOT enabled here —
# that's reserved for issue #17 (volume unlock via hmac-secret),
# which is a separate user flow with different storage shape.
webauthn-rs = "0.5"

[dev-dependencies]
# `test-util` enables tokio::time::pause/start_paused for fs_lock's
# wait-with-timeout tests. The `tokio = { features = ["full"] }`
# workspace dep doesn't include test-util.
tokio = { workspace = true, features = ["test-util"] }
