[package]
name = "nasty-system"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nasty-common = { path = "../nasty-common" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
schemars.workspace = true
libc.workspace = true
base64.workspace = true
rnix = "0.12"
x509-parser = "0.18"
rowan = "0.15"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid.workspace = true
zbus.workspace = true

[dev-dependencies]
# `test-util` enables tokio::time::pause/advance for transaction tests.
# Not used at runtime, only in #[cfg(test)] code.
tokio = { workspace = true, features = ["test-util"] }
