[package]
name = "nasty-system"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
nasty-common = { path = "../nasty-common" }
nasty-apps = { path = "../nasty-apps" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
schemars.workspace = true
libc.workspace = true
base64.workspace = true
sha2 = "0.11"
hmac = "0.13"
bcrypt = "0.19"
rand.workspace = true
rnix = "0.14"
x509-parser = "0.18"
rowan = "0.16"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid.workspace = true
zbus.workspace = true

[dev-dependencies]
# `test-util` enables tokio::time::pause/advance for transaction tests.
# Not used at runtime, only in #[cfg(test)] code.
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
